--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -84,8 +84,28 @@
 
         </footer>
 
+        <section class="comment-content" style="border-top: 1px solid #ebf2f6; margin-top: 35px;">
+            <div id="disqus_thread"></div>
+            <script>
+            var disqus_config = function () {
+            this.page.url = '{{url absolute="true"}}';  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = 'ghost-{{id}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://kalipare.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </section>
+
     </article>
 </main>
+
+<div 
+                            
 
 {{!-- Links to Previous/Next posts --}}
 <aside class="read-next">
