--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -13,13 +13,15 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    {{!-- Google Webmaster Verification --}}
+    <meta name="google-site-verification" content="dl35DtmyGQivUZ0LaiI7-YqHKyqLIwtIpur3yoa0wMY" />
+
     {{!-- Brand icon --}}
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-
 
     {{!-- Ghost outputs important style and meta data with this tag --}}
     {{ghost_head}}
